# freq_analysis

./: .travis.yml  CMakeLists.txt  README.md
example/: sample_walking.cpp
include/freq_analysis/: gabor_wavelet.hpp  wavelet_converter.hpp
src/: gabor_wavelet.cpp  wavelet_converter.cpp
test/: test_converter.cpp  test_filter.cpp  test_gabor.cpp  test_gabor_filter.cpp  test_wavelet_converter.cpp
